# topcoat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  STYLE.md  Topcoat.toml  ]  release-plz.toml  rustfmt.toml
benchmarks/axum-maud/: Cargo.toml  build.rs
benchmarks/axum-maud/src/: catalog.rs  components.rs  main.rs
benchmarks/leptos/: Cargo.toml
benchmarks/leptos/src/: app.rs  catalog.rs  components.rs  format.rs  lib.rs  main.rs  model.rs  pages.rs  server_fns.rs
benchmarks/topcoat/: Cargo.toml  build.rs
benchmarks/topcoat/src/: app.rs  catalog.rs  main.rs  urls.rs
crates/topcoat/: CHANGELOG.md  Cargo.toml
crates/topcoat-alpine-ajax/: Cargo.toml
crates/topcoat-alpine-ajax/src/: header.rs  lib.rs  request.rs
crates/topcoat-asset/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-asset/src/: asset.rs  bundle.rs  bundler.rs  cursor.rs  error.rs  hash.rs  lib.rs  manifest.rs  options.rs  resolver.rs  router.rs  source.rs  view.rs
crates/topcoat-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-cli/docs/: fmt.md
crates/topcoat-cli/src/: asset.rs  cargo.rs  dev.rs  fmt.rs  lib.rs
crates/topcoat-cookie/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-cookie/src/: jar.rs  lib.rs  macros.rs  map.rs  prefix.rs  private.rs  router.rs  signed.rs  store.rs
crates/topcoat-core/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-core/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-core/macro/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-core/src/: abort.rs  base_url.rs  cache.rs  context.rs  error.rs  lib.rs  memoize.rs  runtime.rs
crates/topcoat-font/: CHANGELOG.md  Cargo.toml  README.md  build.rs  fonts.json
crates/topcoat-font/fontsource/: Cargo.toml  README.md  build.rs
crates/topcoat-font/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-font/macro/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-font/src/: ast.rs  component.rs  css.rs  display.rs  face.rs  families.rs  family.rs  font.rs  fontsource.rs  format.rs  lib.rs  resolver.rs  router.rs  runtime.rs  source.rs  style.rs  subset.rs  tech.rs  unicode.rs  unicode_range.rs  view.rs  weight.rs
crates/topcoat-font/tests/: pretty.rs
crates/topcoat-htmx/: CHANGELOG.md  Cargo.toml
crates/topcoat-htmx/src/: header.rs  lib.rs  location.rs  request.rs  response.rs  swap.rs  trigger.rs
crates/topcoat-icon/: CHANGELOG.md  Cargo.toml
crates/topcoat-icon/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-icon/iconify/: Cargo.toml
crates/topcoat-icon/macro/: CHANGELOG.md  Cargo.toml
crates/topcoat-icon/src/: component.rs  icon.rs  iconify.rs  lib.rs
crates/topcoat-macro/: Cargo.toml
crates/topcoat-macro/docs/: style.md
crates/topcoat-macro/src/: lib.rs
crates/topcoat-mail/: Cargo.toml
crates/topcoat-mail/grammar/: Cargo.toml
crates/topcoat-mail/macro/: Cargo.toml
crates/topcoat-mail/src/: address.rs  attachment.rs  lib.rs  mail.rs  mailbox.rs
crates/topcoat-pretty/: Cargo.toml  README.md
crates/topcoat-pretty/src/: delim.rs  error.rs  lib.rs  macro.rs  pretty_print.rs  printer.rs  registry.rs  ring_buffer.rs  rust.rs  snippet.rs  span.rs  text.rs  token.rs  trivia.rs
crates/topcoat-router/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-router/docs/: error.md  module_router.md  tower.md
crates/topcoat-router/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-router/macro/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-router/src/: ast.rs  body.rs  compression.rs  content.rs  context.rs  dynamic_routes.rs  endpoint.rs  error.rs  fallback.rs  file_router.rs  handler.rs  layer.rs  layout.rs  lib.rs  methods.rs  module.rs  page.rs  path.rs  path_param.rs  query_param.rs  redirect.rs  request.rs  response.rs  route.rs  router.rs  runtime.rs  segment.rs  serve.rs  service.rs  state.rs  static_routes.rs  tower.rs
crates/topcoat-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-runtime/browser/: .gitignore  package.json  tsconfig.json  tsup.config.ts
crates/topcoat-runtime/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-runtime/macro/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-runtime/src/: ast.rs  bind_attribute.rs  event.rs  event_handler.rs  expr.rs  lib.rs  procedure.rs  reactive_scope.rs  runtime.rs  shard.rs  signal.rs  string.rs  surrogate.rs
crates/topcoat-session/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-session/src/: config.rs  lib.rs  origin.rs  router.rs  session.rs  state.rs  token.rs
crates/topcoat-tailwind/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-tailwind/src/: build.rs  lib.rs  stylesheet.rs
crates/topcoat-ui/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-ui/registry/: CHANGELOG.md  Cargo.toml  build.rs  button.rs  registry.toml
crates/topcoat-ui/registry2/: registry.toml
crates/topcoat-ui/registry3/: foo.rs  registry.toml
crates/topcoat-ui/src/: generate.rs  lib.rs  manage.rs  registry.rs
crates/topcoat-view/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-view/benches/: render.rs
crates/topcoat-view/grammar/: CHANGELOG.md  Cargo.toml
crates/topcoat-view/macro/: CHANGELOG.md  Cargo.toml  README.md
crates/topcoat-view/src/: attribute.rs  class.rs  component.rs  element.rs  escape.rs  format.rs  length.rs  lib.rs  node.rs  props.rs  runtime.rs  token.rs  view.rs
crates/topcoat-view/tests/: pretty.rs
crates/topcoat/docs/: alpine-ajax.md  app_context.md  asset.md  assets.md  context.md  cookie.md  cookies.md  font.md  functions_not_middlewares.md  getting_started.md  htmx.md  icon.md  router.md  runtime.md  session.md  tailwind.md  ui.md  view.md
crates/topcoat/src/: alpine_ajax.rs  asset.rs  context.rs  cookie.rs  dev.rs  font.rs  htmx.rs  icon.rs  internal.rs  lib.rs  router.rs  runtime.rs  serve.rs  session.rs  tailwind.rs  view.rs
examples/hello-world/: Cargo.toml
examples/icon/: Cargo.toml  build.rs
examples/request-response/: Cargo.toml
examples/tailwind/: Cargo.toml  build.rs
examples/toasty-todo/: Cargo.toml
examples/ui/: Cargo.toml  build.rs  components.toml  styles.css
(+955 files in other folders)
