[workspace]
resolver = "2"
members = [
    "crates/topcoat",
    "crates/topcoat-asset",
    "crates/topcoat-cli",
    "crates/topcoat-cookie",
    "crates/topcoat-core",
    "crates/topcoat-core/macro",
    "crates/topcoat-pretty",
    "crates/topcoat-router",
    "crates/topcoat-router/macro",
    "crates/topcoat-runtime",
    "crates/topcoat-runtime/macro",
    "crates/topcoat-tailwind",
    "crates/topcoat-ui",
    "crates/topcoat-view",
    "crates/topcoat-view/macro",

    "examples/app-context",
    "examples/assets",
    "examples/context",
    "examples/cookies",
    "examples/hello-world",
    "examples/manual-router",
    "examples/module-router",
    "examples/path-query-params",
    "examples/procedure",
    "examples/request-response",
    "examples/runtime",
    "examples/tailwind",
]

[workspace.lints.rust]
unsafe_code = "deny"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1

[workspace.dependencies]
# Topcoat crates
topcoat = { path = "crates/topcoat" }
topcoat-asset = { path = "crates/topcoat-asset" }
topcoat-cookie = { path = "crates/topcoat-cookie" }
topcoat-core = { path = "crates/topcoat-core" }
topcoat-core-macro = { path = "crates/topcoat-core/macro" }
topcoat-pretty = { path = "crates/topcoat-pretty" }
topcoat-router = { path = "crates/topcoat-router" }
topcoat-router-macro = { path = "crates/topcoat-router/macro" }
topcoat-runtime = { path = "crates/topcoat-runtime" }
topcoat-runtime-macro = { path = "crates/topcoat-runtime/macro" }
topcoat-tailwind = { path = "crates/topcoat-tailwind" }
topcoat-ui = { path = "crates/topcoat-ui" }
topcoat-view = { path = "crates/topcoat-view" }
topcoat-view-macro = { path = "crates/topcoat-view/macro" }

anyhow = "1.0"
anymap3 = "1.0"
axum = "0.8.8"
boxcar = "0.2"
bumpalo = "3.20"
bytes = "1"
clap = "4.6.0"
console = "0.16"
const-serialize = "0.7"
cookie = "0.18"
dialoguer = { version = "0.12", default-features = false }
form_urlencoded = "1"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3.3"
hashbrown = "0.17"
heck = "0.5.0"
http = "1.4.0"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
indicatif = "0.18"
inventory = "0.3.24"
matchit = "0.9"
memchr = "2.8"
mime_guess = "2"
multer = "3.1"
notify = "8.1.0"
percent-encoding = "2"
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0.106"
quote = "1.0.45"
ref-cast = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
sha2 = "0.11"
syn = "2.0.117"
thiserror = "2.0.18"
tokio = "1.51.1"
toml = "1.1.2"
tokio-tungstenite = "0.29"
tower = "0.5"
tower-http = "0.6"
tower-service = "0.3"
ureq = "3.3"
uuid = "1.23"
