[workspace]
resolver = "2"
members = [
    "crates/topcoat",
    "crates/topcoat-asset",
    "crates/topcoat-cli",
    "crates/topcoat-cookie",
    "crates/topcoat-core",
    "crates/topcoat-core/grammar",
    "crates/topcoat-core/macro",
    "crates/topcoat-font",
    "crates/topcoat-font/grammar",
    "crates/topcoat-font/macro",
    "crates/topcoat-font/fontsource",
    "crates/topcoat-font/fontsource/grammar",
    "crates/topcoat-font/fontsource/macro",
    "crates/topcoat-htmx",
    "crates/topcoat-icon",
    "crates/topcoat-icon/iconify",
    "crates/topcoat-icon/iconify/grammar",
    "crates/topcoat-icon/iconify/macro",
    "crates/topcoat-pretty",
    "crates/topcoat-router",
    "crates/topcoat-router/grammar",
    "crates/topcoat-router/macro",
    "crates/topcoat-runtime",
    "crates/topcoat-runtime/grammar",
    "crates/topcoat-runtime/macro",
    "crates/topcoat-tailwind",
    "crates/topcoat-ui",
    "crates/topcoat-ui/registry",
    "crates/topcoat-view",
    "crates/topcoat-view/grammar",
    "crates/topcoat-view/macro",

    "examples/app-context",
    "examples/asset",
    "examples/context",
    "examples/cookie",
    "examples/font",
    "examples/hello-world",
    "examples/htmx",
    "examples/icon",
    "examples/manual-router",
    "examples/module-router",
    "examples/path-query-params",
    "examples/procedure",
    "examples/request-response",
    "examples/runtime",
    "examples/shard",
    "examples/tailwind",
    "examples/toasty-todo",
    "examples/ui",

    "benchmarks/topcoat",
]
exclude = [
    "benchmarks/leptos",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny" 

[workspace.lints.clippy]
mod_module_files = "deny"
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"

[profile.dev]
debug = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = 1

[profile.test.package."*"]
debug = false

[workspace.dependencies]
# Topcoat crates
topcoat = { path = "crates/topcoat" }
topcoat-asset = { path = "crates/topcoat-asset" }
topcoat-cookie = { path = "crates/topcoat-cookie" }
topcoat-core = { path = "crates/topcoat-core" }
topcoat-core-grammar = { path = "crates/topcoat-core/grammar" }
topcoat-core-macro = { path = "crates/topcoat-core/macro" }
topcoat-font = { path = "crates/topcoat-font" }
topcoat-font-grammar = { path = "crates/topcoat-font/grammar" }
topcoat-font-macro = { path = "crates/topcoat-font/macro" }
topcoat-font-fontsource = { path = "crates/topcoat-font/fontsource" }
topcoat-font-fontsource-grammar = { path = "crates/topcoat-font/fontsource/grammar" }
topcoat-font-fontsource-macro = { path = "crates/topcoat-font/fontsource/macro" }
topcoat-htmx = { path = "crates/topcoat-htmx" }
topcoat-icon = { path = "crates/topcoat-icon" }
topcoat-icon-iconify = { path = "crates/topcoat-icon/iconify" }
topcoat-icon-iconify-grammar = { path = "crates/topcoat-icon/iconify/grammar" }
topcoat-icon-iconify-macro = { path = "crates/topcoat-icon/iconify/macro" }
topcoat-pretty = { path = "crates/topcoat-pretty" }
topcoat-router = { path = "crates/topcoat-router" }
topcoat-router-grammar = { path = "crates/topcoat-router/grammar" }
topcoat-router-macro = { path = "crates/topcoat-router/macro" }
topcoat-runtime = { path = "crates/topcoat-runtime" }
topcoat-runtime-grammar = { path = "crates/topcoat-runtime/grammar" }
topcoat-runtime-macro = { path = "crates/topcoat-runtime/macro" }
topcoat-tailwind = { path = "crates/topcoat-tailwind" }
topcoat-ui = { path = "crates/topcoat-ui" }
topcoat-ui-registry = { path = "crates/topcoat-ui/registry" }
topcoat-view = { path = "crates/topcoat-view" }
topcoat-view-grammar = { path = "crates/topcoat-view/grammar" }
topcoat-view-macro = { path = "crates/topcoat-view/macro" }

anyhow = "1.0"
anymap3 = "1.0"
axum = "0.8.8"
boxcar = "0.2"
bytes = "1"
clap = "4.6.0"
console = "0.16"
cookie = "0.18"
criterion = "0.8"
dialoguer = { version = "0.12", default-features = false }
form_urlencoded = "1"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3.3"
hashbrown = "0.17"
heck = "0.5.0"
http = "1.4.0"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
indicatif = "0.18"
inventory = "0.3.24"
matchit = "0.9"
memchr = "2.8"
mime_guess = "2"
multer = "3.1"
notify = "8.1.0"
percent-encoding = "2"
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0.106"
quote = "1.0.45"
ref-cast = "1.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
sha2 = "0.11"
smallvec = "1"
syn = "2.0.117"
thiserror = "2.0.18"
toasty = "0.7"
tokio = "1.51.1"
toml = "1.1.2"
tokio-tungstenite = "0.29"
ureq = "3.3"
uuid = "1.23"
