[workspace]
resolver = "2"
members = [
    "crates/topcoat",
    "crates/topcoat-asset",
    "crates/topcoat-cli",
    "crates/topcoat-cookie",
    "crates/topcoat-core",
    "crates/topcoat-core/grammar",
    "crates/topcoat-core/macro",
    "crates/topcoat-font",
    "crates/topcoat-font/grammar",
    "crates/topcoat-font/macro",
    "crates/topcoat-htmx",
    "crates/topcoat-icon",
    "crates/topcoat-icon/grammar",
    "crates/topcoat-icon/macro",
    "crates/topcoat-router",
    "crates/topcoat-router/grammar",
    "crates/topcoat-router/macro",
    "crates/topcoat-runtime",
    "crates/topcoat-runtime/grammar",
    "crates/topcoat-runtime/macro",
    "crates/topcoat-tailwind",
    "crates/topcoat-ui",
    "crates/topcoat-ui/registry",
    "crates/topcoat-view",
    "crates/topcoat-view/grammar",
    "crates/topcoat-view/macro",

    "examples/app-context",
    "examples/asset",
    "examples/context",
    "examples/cookie",
    "examples/font",
    "examples/hello-world",
    "examples/htmx",
    "examples/icon",
    "examples/manual-router",
    "examples/module-router",
    "examples/path-query-params",
    "examples/procedure",
    "examples/request-response",
    "examples/runtime",
    "examples/shard",
    "examples/tailwind",
    "examples/toasty-todo",
    "examples/ui",

    "benchmarks/topcoat",
]
exclude = [
    "benchmarks/leptos",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
authors = ["Julien Scholz <hello@julien-scholz.dev>"]
license = "MIT"
description = "A modular, batteries-included Rust web framework for server-rendered apps."
repository = "https://github.com/tokio-rs/topcoat"
homepage = "https://github.com/tokio-rs/topcoat"
keywords = ["web", "framework", "ssr", "html", "server"]
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny" 

[workspace.lints.clippy]
mod_module_files = "deny"
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"

[profile.dev]
debug = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = 1

[profile.test.package."*"]
debug = false

[workspace.dependencies]
# The `topcoat` facade is only ever a dev-dependency of the publishable
# sub-crates (and a normal dependency of the non-publishable examples), so it
# deliberately carries NO version. A versioned dev-dependency would force cargo
# to resolve `topcoat = "^X.Y.Z"` against crates.io when *packaging* a sub-crate
# for publish. That is impossible during a release, since the sub-crates publish
# before the facade does. Path-only dev-dependencies are dropped from the published
# manifest, sidestepping the facade<->sub-crate cycle. Do not add a version here.
topcoat = { path = "crates/topcoat" }
topcoat-asset = { version = "0.0.3", path = "crates/topcoat-asset" }
topcoat-cookie = { version = "0.0.3", path = "crates/topcoat-cookie" }
topcoat-core = { version = "0.0.3", path = "crates/topcoat-core" }
topcoat-core-grammar = { version = "0.0.3", path = "crates/topcoat-core/grammar" }
topcoat-core-macro = { version = "0.0.3", path = "crates/topcoat-core/macro" }
topcoat-font = { version = "0.0.3", path = "crates/topcoat-font" }
topcoat-font-grammar = { version = "0.0.3", path = "crates/topcoat-font/grammar" }
topcoat-font-macro = { version = "0.0.3", path = "crates/topcoat-font/macro" }
topcoat-htmx = { version = "0.0.3", path = "crates/topcoat-htmx" }
topcoat-icon = { version = "0.0.3", path = "crates/topcoat-icon" }
topcoat-icon-grammar = { version = "0.0.3", path = "crates/topcoat-icon/grammar" }
topcoat-icon-macro = { version = "0.0.3", path = "crates/topcoat-icon/macro" }
topcoat-router = { version = "0.0.3", path = "crates/topcoat-router" }
topcoat-router-grammar = { version = "0.0.3", path = "crates/topcoat-router/grammar" }
topcoat-router-macro = { version = "0.0.3", path = "crates/topcoat-router/macro" }
topcoat-runtime = { version = "0.0.3", path = "crates/topcoat-runtime" }
topcoat-runtime-grammar = { version = "0.0.3", path = "crates/topcoat-runtime/grammar" }
topcoat-runtime-macro = { version = "0.0.3", path = "crates/topcoat-runtime/macro" }
topcoat-tailwind = { version = "0.0.3", path = "crates/topcoat-tailwind" }
topcoat-ui = { version = "0.0.3", path = "crates/topcoat-ui" }
topcoat-ui-registry = { version = "0.0.3", path = "crates/topcoat-ui/registry" }
topcoat-view = { version = "0.0.3", path = "crates/topcoat-view" }
topcoat-view-grammar = { version = "0.0.3", path = "crates/topcoat-view/grammar" }
topcoat-view-macro = { version = "0.0.3", path = "crates/topcoat-view/macro" }

anyhow = "1.0"
anymap3 = "1.0"
axum = "0.8.8"
boxcar = "0.2"
bytes = "1"
clap = "4.6.0"
console = "0.16"
cookie = "0.18"
criterion = "0.8"
dialoguer = { version = "0.12", default-features = false }
form_urlencoded = "1"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3.3"
hashbrown = "0.17"
heck = "0.5.0"
http = "1.4.0"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
indicatif = "0.18"
inventory = "0.3.24"
itoa = "1.0"
matchit = "0.9"
memchr = "2.8"
mime_guess = "2"
multer = "3.1"
notify = "8.1.0"
percent-encoding = "2"
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = "1.0.106"
quote = "1.0.45"
ref-cast = "1.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
sha2 = "0.11"
smallvec = "1"
syn = "2.0.117"
thiserror = "2.0.18"
toasty = "0.7"
tokio = "1.51.1"
toml = "1.1.2"
tokio-tungstenite = "0.29"
ureq = "3.3"
uuid = "1.23"
zmij = "1.0"
