[package]
name = "storefront-axum-maud"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[build-dependencies]
# Build-time tooling only: runs the same pinned standalone Tailwind CLI as the
# Topcoat app. Nothing from Topcoat is linked into the server binary.
topcoat-tailwind = { path = "../../crates/topcoat-tailwind" }

[lints.rust]
unsafe_code = "deny"

# Detached from the Topcoat workspace on purpose: this app is a standalone
# Axum + Maud project with its own dependency tree.
[workspace]
