[package]
name = "topcoat-alpine-ajax"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
topcoat-core.workspace = true

http.workspace = true

[dev-dependencies]
topcoat = { workspace = true, features = ["alpine-ajax", "router"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
