[package]
name = "topcoat-asset"
version = "0.1.0"
edition = "2024"

[features]
default = []

bundler = [
	"dep:mime_guess",
	"dep:reqwest",
	"dep:tokio",
]
router = [
	"view",
	"dep:topcoat-router",
	"dep:tokio",
]
view = [
	"dep:topcoat-core",
	"dep:topcoat-view",
]

[dependencies]
topcoat-core = { workspace = true, optional = true }
topcoat-router = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }

http.workspace = true
memchr.workspace = true
mime_guess = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["fs", "rt"] }
toml.workspace = true

[lints]
workspace = true
