[package]
name = "topcoat-cli"
version = "0.1.0"
edition = "2024"
default-run = "topcoat"

[[bin]]
name = "topcoat"
path = "src/bin/topcoat.rs"

[[bin]]
name = "cargo-topcoat"
path = "src/bin/cargo_topcoat.rs"

[dependencies]
topcoat-asset = { workspace = true, features = ["bundler"] }
topcoat-pretty.workspace = true
topcoat-ui.workspace = true
topcoat-view = { workspace = true, features = ["pretty"] }

axum = { workspace = true, features = ["ws"] }
clap = { workspace = true, features = ["derive"] }
console.workspace = true
dialoguer.workspace = true
futures-util.workspace = true
glob.workspace = true
indicatif.workspace = true
notify.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde_json.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "io-util", "time", "sync"] }

[lints]
workspace = true
