[package]
name = "topcoat-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
default-run = "topcoat"

[[bin]]
name = "topcoat"
path = "src/bin/topcoat.rs"

[[bin]]
name = "cargo-topcoat"
path = "src/bin/cargo_topcoat.rs"

[dependencies]
topcoat-asset = { workspace = true, features = ["bundler"] }
topcoat-core = { workspace = true, features = ["build"] }
topcoat-core-grammar = { workspace = true, features = ["pretty"] }
topcoat-font-grammar = { workspace = true, features = ["fontsource", "pretty"] }
topcoat-ui.workspace = true
topcoat-view-grammar = { workspace = true, features = ["pretty"] }

axum = { workspace = true, features = ["ws"] }
clap = { workspace = true, features = ["derive"] }
console.workspace = true
dialoguer.workspace = true
futures-util.workspace = true
glob.workspace = true
indicatif.workspace = true
notify.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde_json.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "io-util", "time", "sync"] }

[dev-dependencies]
topcoat.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
