[package]
name = "topcoat-cookie"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
router = [
	"dep:topcoat-router",
]

[dependencies]
topcoat-router = { workspace = true, optional = true }
topcoat-core.workspace = true

cookie = { workspace = true, features = ["secure", "percent-encode"] }
http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
topcoat = { workspace = true, features = ["cookie"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true

# `topcoat` (the facade) is used only in doc-tests, which `cargo-udeps` cannot
# analyze, so it is ignored here to avoid a false positive.
[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
