[package]
name = "topcoat-font"
version.workspace = true
edition.workspace = true

[features]
asset = [
	"dep:topcoat-asset",
]
discover = [
	"dep:inventory",
]
router = [
	"dep:topcoat-router",
]
view = [
	"dep:topcoat-view",
	"topcoat-asset?/view",
]

[dependencies]
topcoat-core.workspace = true
topcoat-asset = { workspace = true, optional = true }
topcoat-router = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }

inventory = { workspace = true, optional = true }

[dev-dependencies]
topcoat = { workspace = true, features = ["font"] }

[lints]
workspace = true
