[package]
name = "topcoat-font"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
asset = [
	"dep:topcoat-asset",
]
discover = [
	"dep:inventory",
]
router = [
	"dep:topcoat-router",
]
view = [
	"dep:topcoat-view",
	"dep:topcoat-view-macro",
	"topcoat-asset?/view",
]

[dependencies]
topcoat-core.workspace = true
topcoat-asset = { workspace = true, optional = true }
topcoat-router = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }
topcoat-view-macro = { workspace = true, optional = true }

inventory = { workspace = true, optional = true }

[dev-dependencies]
topcoat = { workspace = true, features = ["view", "asset", "font-fontsource"] }

[lints]
workspace = true
