[package]
name = "topcoat-icon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
topcoat-core.workspace = true
topcoat-view.workspace = true
topcoat-view-macro.workspace = true

[lints]
workspace = true
