[package]
name = "topcoat-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
router = []
runtime = ["dep:topcoat-runtime"]
view = ["dep:topcoat-view"]

discover = []

[dependencies]
topcoat-runtime = { workspace = true, optional = true, features = ["parsing"] }
topcoat-view = { workspace = true, optional = true, features = ["parsing"] }

heck.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
