[package]
name = "topcoat-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
router = ["dep:topcoat-router", "topcoat-router/parsing"]
runtime = ["dep:topcoat-runtime"]
view = ["dep:topcoat-view"]

discover = ["topcoat-router?/discover"]

[dependencies]
topcoat-core = { workspace = true, features = ["parsing"] }
topcoat-router = { workspace = true, optional = true, features = ["parsing"] }
topcoat-runtime = { workspace = true, optional = true, features = ["parsing"] }
topcoat-view = { workspace = true, optional = true, features = ["parsing"] }

quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
