[package]
name = "topcoat-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
topcoat-core.workspace = true
topcoat-view.workspace = true

lettre = { workspace = true, features = ["builder"] }
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
