[package]
name = "topcoat-pretty"
version = "0.1.0"
edition = "2024"

[dependencies]
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }

[lints]
workspace = true
