[package]
name = "topcoat-pretty"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }

[dev-dependencies]
topcoat.workspace = true

[lints]
workspace = true
