[package]
name = "topcoat-router"
version = "0.1.0"
edition = "2024"

[features]
asset = [
	"dep:topcoat-asset",
]
discover = [
	"dep:inventory",
	"topcoat-runtime/discover",
]
parsing = [
	"dep:proc-macro2",
	"dep:quote",
	"dep:syn",
	"topcoat-core/parsing",
]
multipart = [
	"dep:futures-util",
	"dep:multer",
]
runtime = [
	"dep:topcoat-runtime",
]

[dependencies]
topcoat-asset = { workspace = true, optional = true, features = ["view"] }
topcoat-core.workspace = true
topcoat-runtime = { workspace = true, optional = true }
topcoat-view = { workspace = true, features = ["axum"] }

axum.workspace = true
bytes.workspace = true
form_urlencoded.workspace = true
futures-util = { workspace = true, optional = true }
heck.workspace = true
http.workspace = true
inventory = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_urlencoded.workspace = true
syn = { workspace = true, optional = true, features = ["full"] }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
