[package]
name = "topcoat-router"
version = "0.1.0"
edition = "2024"

[features]
discover = [
	"dep:inventory",
]
multipart = [
	"dep:futures-util",
	"dep:multer",
]
parsing = [
	"dep:proc-macro2",
	"dep:quote",
	"dep:syn",
	"topcoat-core/parsing",
]

[dependencies]
topcoat-core.workspace = true
topcoat-view.workspace = true

bytes.workspace = true
form_urlencoded.workspace = true
futures-core.workspace = true
futures-util = { workspace = true, optional = true }
heck.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
matchit.workspace = true
percent-encoding.workspace = true
inventory = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_urlencoded.workspace = true
syn = { workspace = true, optional = true, features = ["full"] }
tokio = { workspace = true, features = ["net", "rt"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
topcoat = { workspace = true, features = ["router"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
