[package]
name = "topcoat-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
compression = [
	"dep:tower",
	"dep:tower-http",
]
discover = [
	"dep:inventory",
]
multipart = [
	"dep:futures-util",
	"dep:multer",
]
tower = [
	"dep:tower",
	"tokio/macros",
	"tokio/sync",
]

[dependencies]
topcoat-core.workspace = true
topcoat-view = { workspace = true, features = ["http"] }

bytes.workspace = true
form_urlencoded.workspace = true
futures-core.workspace = true
futures-util = { workspace = true, optional = true }
heck.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
matchit.workspace = true
percent-encoding.workspace = true
inventory = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_urlencoded.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
tower = { workspace = true, optional = true, features = ["util"] }
tower-http = { workspace = true, optional = true, features = [
	"compression-br",
	"compression-gzip",
] }

[dev-dependencies]
topcoat = { workspace = true, features = ["compression", "router", "tower"] }
tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }
tower = { workspace = true, features = ["buffer", "limit", "timeout", "util"] }
tower-http = { workspace = true, features = [
	"compression-gzip",
	"cors",
	"set-header",
	"timeout",
	"trace",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
